--- a/lib/shared/Cargo.toml
+++ b/lib/shared/Cargo.toml
@@ -11,7 +11,7 @@ derive-new = "0.7.0"
 embedded-graphics = "0.8.1"
 fugit = "0.3.7"
 futures-task = {version = "0.3.31", default-features = false}
-metro_m0 = {version = "0.19.0", features = ["rt", "async"], optional = true}
+metro_m0 = {version = "0.19.0", optional = true}
 nb = "1.1.0"
 pygamer = {version = "0.15", features = ["rt", "async"], optional = true}
 rtic = {version = "2.1.2", features = ["thumbv7-backend"], optional = true}
