--- a/metro/hal-delay-ns/Cargo.toml
+++ b/metro/hal-delay-ns/Cargo.toml
@@ -6,4 +6,4 @@ version = "0.1.0"
 [dependencies]
 # TODO: This will not be needed when PR is merged
 shared = {path = "../../lib/shared", features = ["hal-delay-ns-test"]}
-shared-pygamer = {path = "../../lib/shared-pygamer", features = ["clock1k"]}
+shared-metro = {path = "../../lib/shared-metro", features = ["clock1k"]}
