--- a/pygamer/hal-rtc/Cargo.toml
+++ b/pygamer/hal-rtc/Cargo.toml
@@ -4,4 +4,6 @@ name = "hal-rtc"
 version = "0.1.0"
 
 [dependencies]
+# TODO: This will not be needed when PR is merged
+shared = {path = "../../lib/shared", features = ["hal-rtc-test"]}
 shared-pygamer = {path = "../../lib/shared-pygamer", features = ["clock1k"]}
