--- a/pygamer/rtic-stress/Cargo.toml
+++ b/pygamer/rtic-stress/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 edition = "2021"
-name = "monotonic-count-sequence"
+name = "rtic-stress"
 version = "0.1.0"
 
 [dependencies]
-shared-pygamer = {path = "../../lib/shared-pygamer", features = ["rtic"]}
+shared-pygamer = {path = "../../lib/shared-pygamer", features = ["rtic", "neopixels"]}
 
 [features]
 clock1k = ["shared-pygamer/clock1k"]
 clock32k = ["shared-pygamer/clock32k"]
 debug = ["shared-pygamer/debug"]
+neopixels = []
 systick = ["shared-pygamer/systick"]
