* Adds `rtic` support for the Metro M0, and the feature to `shared-metro`. * Renames the `hal-*` tests to just `*` since everything is testing the HAL. * Removes the `delay-ns-test` feature from `lib/shared` as PR #880 has been merged into the HAL.

--- a/lib/shared-metro/Cargo.toml
+++ b/lib/shared-metro/Cargo.toml
@@ -11,4 +11,5 @@ shared = {path = "../shared", features = ["metro"]}
 [features]
 clock1k = ["shared/clock1k"]
 clock32k = ["shared/clock32k"]
+rtic = ["shared/rtic-metro"]
 systick = ["shared/systick"]
