--- a/lib/shared/Cargo.toml
+++ b/lib/shared/Cargo.toml
@@ -14,19 +14,17 @@ futures-task = {version = "0.3.31", default-features = false}
 metro_m0 = {version = "0.19.0", optional = true}
 nb = "1.1.0"
 pygamer = {version = "0.15", features = ["rt", "async"], optional = true}
-rtic = {version = "2.1.2", features = ["thumbv7-backend"], optional = true}
+rtic = {version = "2.1.3", optional = true}
 rtic-monotonics = {version = "2.0.3", features = ["cortex-m-systick"], optional = true}
 
 [features]
 clock1k = ["atsamd-hal/rtic"]
 clock32k = ["atsamd-hal/rtic"]
-debug = ["rtic"]
 # TODO: This will not be needed when PR is merged
-hal-rtc-test = []
-# TODO: This will not be needed when PR is merged
-hal-delay-ns-test = []
 metro = ["dep:metro_m0"]
 neopixels = ["pygamer/neopixel-spi"]
 pygamer = ["dep:pygamer"]
-rtic = ["dep:rtic"]
+rtc-test = []
+rtic-metro = ["dep:rtic", "rtic/thumbv6-backend", "atsamd-hal/rtic"]
+rtic-pygamer = ["dep:rtic", "rtic/thumbv7-backend", "atsamd-hal/rtic"]
 systick = ["dep:rtic-monotonics"]
