--- a/metro/delay-ns/Cargo.toml
+++ b/metro/delay-ns/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
 edition = "2021"
-name = "hal-rtc"
+name = "delay-ns"
 version = "0.1.0"
 
 [dependencies]
-# TODO: This will not be needed when PR is merged
-shared = {path = "../../lib/shared", features = ["hal-rtc-test"]}
 shared-metro = {path = "../../lib/shared-metro", features = ["clock1k"]}
