Adds the `dsu` to the PyGamer tests to test the `hal::dsu` clock v2 migration. Just does CRC32 calculations from flash and RAM.

--- a/pygamer/dsu/Cargo.toml
+++ b/pygamer/dsu/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 edition = "2024"
-name = "clock-tree"
+name = "dsu"
 version = "0.1.0"
 
 [dependencies]
+aligned = "0.4.2"
 shared-pygamer = {path = "../../lib/shared-pygamer"}
