--- a/metro/Cargo.toml
+++ b/metro/Cargo.toml
@@ -10,5 +10,6 @@ resolver = "2"
 
 [patch.crates-io]
 atsamd-hal = {path = "../../atsamd/hal"}
+atsamd-usb-serial = {path = "../../atsamd-usb-serial"}
 metro_m0 = {path = "../../atsamd/boards/metro_m0"}
 sh1107 = {path = "../../sh1107"}
