--- a/pygamer/qspi/Cargo.toml
+++ b/pygamer/qspi/Cargo.toml
@@ -4,5 +4,7 @@ name = "qspi"
 version = "0.1.0"
 
 [dependencies]
-atsamd-hal = {version = "0.22", features = ["dma"]}
 shared-pygamer = {path = "../../lib/shared-pygamer"}
+
+[features]
+clock-v1 = []
